@@ -11,6 +11,9 @@ import com.chua.starter.oauth.server.support.properties.CasProperties;
 import com.chua.starter.oauth.server.support.properties.ThirdPartyBinderProperties;
 import com.chua.starter.oauth.server.support.resolver.LoggerResolver;
 import com.chua.starter.oauth.server.support.token.TokenResolver;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import me.zhyd.oauth.cache.AuthDefaultStateCache;
 import me.zhyd.oauth.cache.AuthStateCache;
 import me.zhyd.oauth.config.AuthConfig;
@@ -33,11 +36,8 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import org.springframework.web.servlet.view.RedirectView;
 
-import jakarta.annotation.Resource;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * gitee绑定账号
@@ -46,25 +46,21 @@ import java.net.URLDecoder;
  */
 @Controller
 @Conditional(OnBeanCondition.class)
+@RequiredArgsConstructor
 @RequestMapping("${plugin.auth.server.context-path:/gitee/bind}")
 public class GiteeBinderProvider implements InitializingBean , ApplicationContextAware {
 
     private GiteeService giteeService;
-    @Resource
-    CasProperties casProperties;
-    @Resource
-    private ThirdPartyBinderProperties thirdPartyBinderProperties;
+    final  CasProperties casProperties;
+    final  ThirdPartyBinderProperties thirdPartyBinderProperties;
     private AuthGiteeRequest authRequest;
 
-    private AuthStateCache authStateCache = AuthDefaultStateCache.INSTANCE;
-    @Resource
-    private LoggerResolver loggerResolver;
-    @Resource
-    private LoginCheck loginCheck;
+    private final AuthStateCache authStateCache = AuthDefaultStateCache.INSTANCE;
+    final  LoggerResolver loggerResolver;
+    final  LoginCheck loginCheck;
     @Value("${plugin.auth.server.context-path:}")
     private String contextPath;
-    @Resource
-    private AuthServerProperties authServerProperties;
+    final  AuthServerProperties authServerProperties;
 
     /**
      * gitee页面
@@ -107,10 +103,7 @@ public class GiteeBinderProvider implements InitializingBean , ApplicationContex
     public String gitee(@RequestParam("loginCode") String loginCode, String callback) {
         String state = AuthStateUtils.createState();
         authStateCache.cache(state + "_info", loginCode);
-        try {
-            authStateCache.cache(state + "_callback", URLDecoder.decode(callback, "UTF-8"));
-        } catch (UnsupportedEncodingException ignored) {
-        }
+        authStateCache.cache(state + "_callback", URLDecoder.decode(callback, StandardCharsets.UTF_8));
         return authRequest.authorize(state);
     }
 
